--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="This is my little studio, tucked away at the corner of the internet." />
-  <meta name="keywords" content="mtch. lofi, lofi, mtch., mtch music, mtch. music" />
   <title>mtch's studio</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <link href="./style.css" rel="stylesheet" type="text/css" media="all" />
@@ -51,7 +50,7 @@
         <tr>
           <td id="maintd">
             <div class="box" id="mainbox">
-              <h2 style="display: inline">
+              <h2 style="display: inline;">
                 &nbsp;HOMEPAGE
                 &nbsp;
               </h2>
@@ -62,23 +61,26 @@
             </div>
             
             <div class="box" id="mainbox2" style="margin-top: 10px">
-              <div class="box" style="margin-top: 10px">
-                <img src="./images/youtube.png" alt="spotify icon" style="width: 14px;vertical-align: middle;">
-                <a class="ytlink" href="https://www.youtube.com" style="vertical-align: middle;">&nbsp;Youtube</a>
+              <a class="ytlink" href="https://www.youtube.com">
+              <div class="box3">
+                <img src="./images/youtube.png" alt="spotify icon" style="width: 20px;">
               </div>
-              <div class="box" style="margin-top: 10px">
-                <img src="./images/netflix.png" alt="netflix icon" style="width: 14px;vertical-align: middle;">
-                <a class="netflixlink" href="https://www.netflix.com" style="vertical-align: middle;">&nbsp;Netflix</a>
+              </a>
+              <a class="netflixlink" href="https://netflix.com">
+              <div class="box3">
+                <img src="./images/netflix.png" alt="netflix icon" style="width: 20px;">
               </div>
-              <div class="box" style="margin-top: 10px">
-                <img src="./images/reddit.png" alt="reddit icon" style="width: 14px;vertical-align: middle;">
-                <a class="redditlink" href="https://www.reddit.com" style="vertical-align: middle;">&nbsp;Reddit</a>
+              </a>
+              <a class="facebooklink" href="https://reddit.com">
+              <div class="box3">
+                <img src="./images/reddit.png" alt="reddit icon" style="width: 20px;">
               </div>
-              <div class="box" style="margin-top: 10px">
-                <img src="./images/facebook.png" alt="facebook icon" style="width: 14px;vertical-align: middle;">
-                <a class="facebooklink" href="https://www.facebook.com/marketplace"
-                  style="vertical-align: middle;">&nbsp;Facebook Marketplace</a>
-              </div>
+              </a>
+              <a class="facebooklink" href="https://www.facebook.com/marketplace">
+                <div class="box3">
+                <img src="./images/facebook.png" alt="facebook icon" style="width: 20px;">
+              </a>
+            </div>
             </div>
           </td>
           <td id="menutd">
