--- a/index.html
+++ b/index.html
@@ -61,26 +61,26 @@
             </div>
             
             <div class="box" id="mainbox2" style="margin-top: 10px">
-              <a class="ytlink" href="https://www.youtube.com">
-              <div class="box3">
-                <img src="./images/youtube.png" alt="spotify icon" style="width: 20px;">
-              </div>
+              <a href="https://www.youtube.com">
+                <div class="box3">
+                  <img src="./images/youtube.png" alt="spotify icon" style="width: 20px;">
+                </div>
               </a>
-              <a class="netflixlink" href="https://netflix.com">
-              <div class="box3">
-                <img src="./images/netflix.png" alt="netflix icon" style="width: 20px;">
-              </div>
+              <a href="https://netflix.com">
+                <div class="box3">
+                  <img src="./images/netflix.png" alt="netflix icon" style="width: 20px;">
+                </div>
               </a>
-              <a class="facebooklink" href="https://reddit.com">
-              <div class="box3">
-                <img src="./images/reddit.png" alt="reddit icon" style="width: 20px;">
-              </div>
+              <a href="https://reddit.com">
+                <div class="box3">
+                  <img src="./images/reddit.png" alt="reddit icon" style="width: 20px;">
+                </div>
               </a>
-              <a class="facebooklink" href="https://www.facebook.com/marketplace">
+              <a href="https://www.facebook.com/marketplace">
                 <div class="box3">
                 <img src="./images/facebook.png" alt="facebook icon" style="width: 20px;">
+                </div>
               </a>
-            </div>
             </div>
           </td>
           <td id="menutd">
